$Id: ChangeLog,v 1.302 2006/01/25 09:38:49 haraldkipp Exp $

2006-01-25  Harald Kipp  <harald.kipp@egnite.de>

	* arch/avr/dev/ivect01.c, arch/avr/dev/ivect02.c,
	arch/avr/dev/ivect03.c, arch/avr/dev/ivect04.c,
	arch/avr/dev/ivect05.c, arch/avr/dev/ivect06.c,
	arch/avr/dev/ivect07.c, arch/avr/dev/ivect08.c,
	arch/avr/dev/ivect09.c, arch/avr/dev/ivect10.c,
	arch/avr/dev/ivect11.c, arch/avr/dev/ivect12.c,
	arch/avr/dev/ivect13.c, arch/avr/dev/ivect14.c,
	arch/avr/dev/ivect15.c, arch/avr/dev/ivect16.c,
	arch/avr/dev/ivect17.c, arch/avr/dev/ivect18.c,
	arch/avr/dev/ivect19.c, arch/avr/dev/ivect20.c,
	arch/avr/dev/ivect21.c, arch/avr/dev/ivect22.c,
	arch/avr/dev/ivect23.c, arch/avr/dev/ivect24.c,
	arch/avr/dev/ivect25.c, arch/avr/dev/ivect26.c,
	arch/avr/dev/ivect27.c, arch/avr/dev/ivect28.c,
	arch/avr/dev/ivect29.c, arch/avr/dev/ivect30.c,
	arch/avr/dev/ivect31.c, arch/avr/dev/ivect32.c,
	arch/avr/dev/ivect33.c, arch/avr/dev/ivect34.c,
	arch/avr/dev/ivect35.c, arch/avr/dev/ivect36.c:
	Applied Thiago A. Correa's patch to fix ICC warnings.


2006-01-24  Harald Kipp  <harald.kipp@egnite.de>

	* dev/npluled.c, include/dev/npluled.h: Controls the green
	LED on Ethernut 3. Kindly provided by Kroum Vassilev.


2006-01-23  Harald Kipp  <harald.kipp@egnite.de>

	* app/basemon/Makefile, app/events/Makefile, app/httpd/Makefile,
	app/inetq/Makefile, app/nutpiper/Makefile, app/pppc/Makefile,
	app/rs232d/Makefile, app/simple/Makefile, app/tcps/Makefile,
	app/threads/Makefile, app/timers/Makefile, app/uart/Makefile:
	The boring game with GCC libraries continues, sigh! Note, that
	this version may also break your application build. Please
	add another -lnutarch at the end of your LIBS list in the
	Makefile.

	* arch/avr/dev/eeprom.c: Wrong parameters in ImageCraft call
	corrected.

	* arch/avr/dev/vs1001k.c, fs/phat12.c, fs/phat16.c, fs/phat32.c,
	pro/dhcpc.c, pro/resolv.c: Added required typecasts before
	left shift.

	* conf/arch/arch.nut, os/confos.c: Dummy NVMEM configuration 